worked with test train split

--- a/1_ml_foundations/module_1_6_tuning/1_6_1_scaling.ipynb
+++ b/1_ml_foundations/module_1_6_tuning/1_6_1_scaling.ipynb
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "url_1 = r\"https://raw.githubusercontent.com/MicrosoftDocs/mslearn-introduction-to-machine-learning/main/Data/dog-training.csv\"\n",
     "url_2 = r\"https://raw.githubusercontent.com/MicrosoftDocs/mslearn-introduction-to-machine-learning/main/m1b_gradient_descent.py\"\n",
     "\n",
-    "download_file(url_2, 'm1b_gradient_descent.py')\n",
+    "# download_file(url_2, 'm1b_gradient_descent.py')\n",
     "download_file(url_1, 'dog-training.csv')"
    ]
   },
