initialized the connection with azure via sdk

--- a/module_2_explore_azure_ml/module_2_2_python_sdk/2_2_1_pyrhon_SDK.ipynb
+++ b/module_2_explore_azure_ml/module_2_2_python_sdk/2_2_1_pyrhon_SDK.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from azure.ai.ml import MLClient\n",
-    "import azure.ai.ml\n",
-    "from azure.identity import DefaultAzureCredential"
+    "from azure.ai.ml import MLClient\n",
+    "from azure.identity import DefaultAzureCredential\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n"
    ]
   },
   {
@@ -27,81 +28,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.25.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(azure.ai.ml.__version__)"
+    "load_dotenv()\n",
+    "\n",
+    "subscription_id = os.getenv(\"AZURE_SUBSCRIPTION_ID\")\n",
+    "resource_group = os.getenv(\"AZURE_RESOURCE_GROUP\")\n",
+    "workspace_name = os.getenv(\"AZURE_WORKSPACE_NAME\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Other Error: Plain typing.Annotated is not valid as type argument\n"
+      "Overriding of current TracerProvider is not allowed\n",
+      "Overriding of current LoggerProvider is not allowed\n",
+      "Overriding of current MeterProvider is not allowed\n",
+      "Attempting to instrument while already instrumented\n",
+      "Attempting to instrument while already instrumented\n",
+      "Attempting to instrument while already instrumented\n"
      ]
     }
    ],
    "source": [
-    "try:\n",
-    "    import azure.ai.ml\n",
-    "    print(\"Azure ML SDK version:\", azure.ai.ml.__version__)\n",
-    "except ImportError as e:\n",
-    "    print(\"Import Error:\", e)\n",
-    "except Exception as e:\n",
-    "    print(\"Other Error:\", e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.13.1 | packaged by Anaconda, Inc. | (main, Dec 11 2024, 17:02:46) [MSC v.1929 64 bit (AMD64)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.version)"
+    "\n",
+    "\n",
+    "ml_client = MLClient(\n",
+    "    DefaultAzureCredential(), subscription_id, resource_group, workspace_name\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<property at 0x162722d4180>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
