commiting saved work

--- a/module_2_explore_azure_ml/module_2_2_python_sdk/2_2_1_pyrhon_SDK.ipynb
+++ b/module_2_explore_azure_ml/module_2_2_python_sdk/2_2_1_pyrhon_SDK.ipynb
@@ -28,15 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
     "load_dotenv()\n",
     "\n",
     "subscription_id = os.getenv(\"AZURE_SUBSCRIPTION_ID\")\n",
     "resource_group = os.getenv(\"AZURE_RESOURCE_GROUP\")\n",
-    "workspace_name = os.getenv(\"AZURE_WORKSPACE_NAME\")"
+    "workspace_name = os.getenv(\"AZURE_WORKSPACE_NAME\")\n",
+    "\n",
+    "\n",
+    "ml_client = MLClient(\n",
+    "    DefaultAzureCredential(), subscription_id, resource_group, workspace_name\n",
+    ")"
    ]
   },
   {
