worked with datastores in azure ml

--- a/module_2_explore_azure_ml/module_2_3/2_3_1_azureml_datastores.ipynb
+++ b/module_2_explore_azure_ml/module_2_3/2_3_1_azureml_datastores.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from azure.ai.ml import MLClient\n",
+    "from azure.identity import DefaultAzureCredential, InteractiveBrowserCredential\n",
     "from dotenv import load_dotenv\n",
-    "import os\n",
-    "from azure.identity import DefaultAzureCredential, InteractiveBrowserCredential\n"
+    "import os\n"
    ]
   },
   {
@@ -28,9 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Overriding of current TracerProvider is not allowed\n",
+      "Overriding of current LoggerProvider is not allowed\n",
+      "Overriding of current MeterProvider is not allowed\n",
+      "Attempting to instrument while already instrumented\n",
+      "Attempting to instrument while already instrumented\n",
+      "Attempting to instrument while already instrumented\n"
+     ]
+    }
+   ],
    "source": [
     "load_dotenv()\n",
     "\n",
@@ -56,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,11 +99,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## To create a URI file data asset, you can use the following code:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading diabetes.csv (< 1 MB): 0.00B [00:00, ?B/s] (< 1 MB): 100%|##########| 528k/528k [00:00<00:00, 1.07MB/s] (< 1 MB): 100%|##########| 528k/528k [00:00<00:00, 1.07MB/s]\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Data({'path': 'azureml://subscriptions/6f83b388-7253-46ac-a2f7-300b7e3f313e/resourcegroups/pbi-dvo-rg/workspaces/dp100dvoML/datastores/workspaceblobstore/paths/LocalUpload/a01a5b9f954664cdfd935246b25e7f69/diabetes.csv', 'skip_validation': False, 'mltable_schema_url': None, 'referenced_uris': None, 'type': 'uri_file', 'is_anonymous': False, 'auto_increment_version': False, 'auto_delete_setting': None, 'name': 'diabetes_csv', 'description': 'its my test csv data', 'tags': {}, 'properties': {}, 'print_as_yaml': False, 'id': '/subscriptions/6f83b388-7253-46ac-a2f7-300b7e3f313e/resourceGroups/pbi-dvo-rg/providers/Microsoft.MachineLearningServices/workspaces/dp100dvoML/data/diabetes_csv/versions/01', 'Resource__source_path': '', 'base_path': 'c:\\\\Users\\\\dvolf\\\\python_projects\\\\azure_dp_100_2025\\\\dp100_ds_associate_azure\\\\module_2_explore_azure_ml\\\\module_2_3', 'creation_context': <azure.ai.ml.entities._system_data.SystemData object at 0x00000270417FF7D0>, 'serialize': <msrest.serialization.Serializer object at 0x00000270417FE8D0>, 'version': '01', 'latest_version': None, 'datastore': None})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from azure.ai.ml.entities import Data\n",
+    "from azure.ai.ml.constants import AssetTypes\n",
+    "\n",
+    "# my_path = r'module_2_explore_azure_ml\\module_2_3\\diabetes.csv'\n",
+    "my_path = r\"C:\\Users\\dvolf\\python_projects\\azure_dp_100_2025\\dp100_ds_associate_azure\\module_2_explore_azure_ml\\module_2_3\\diabetes.csv\"\n",
+    "\n",
+    "my_data = Data(\n",
+    "    path=my_path,\n",
+    "    type=AssetTypes.URI_FILE,\n",
+    "    description=\"its my test csv data\",\n",
+    "    name=\"diabetes_csv\",\n",
+    "    version=\"01\"\n",
+    ")\n",
+    "\n",
+    "ml_client.data.create_or_update(my_data)"
+   ]
   },
   {
    "cell_type": "code",
@@ -101,10 +158,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading module_2_3 (0.53 MBs): 100%|##########| 534459/534459 [00:00<00:00, 812995.96it/s]\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Data({'path': 'azureml://subscriptions/6f83b388-7253-46ac-a2f7-300b7e3f313e/resourcegroups/pbi-dvo-rg/workspaces/dp100dvoML/datastores/workspaceblobstore/paths/LocalUpload/e97a9cbc2d56aa5fed6747b53615fc7e/module_2_3/', 'skip_validation': False, 'mltable_schema_url': None, 'referenced_uris': None, 'type': 'uri_folder', 'is_anonymous': False, 'auto_increment_version': False, 'auto_delete_setting': None, 'name': 'diabetes-folder', 'description': 'my test folder with data', 'tags': {}, 'properties': {}, 'print_as_yaml': False, 'id': '/subscriptions/6f83b388-7253-46ac-a2f7-300b7e3f313e/resourceGroups/pbi-dvo-rg/providers/Microsoft.MachineLearningServices/workspaces/dp100dvoML/data/diabetes-folder/versions/02', 'Resource__source_path': '', 'base_path': 'c:\\\\Users\\\\dvolf\\\\python_projects\\\\azure_dp_100_2025\\\\dp100_ds_associate_azure\\\\module_2_explore_azure_ml\\\\module_2_3', 'creation_context': <azure.ai.ml.entities._system_data.SystemData object at 0x000002704223DEB0>, 'serialize': <msrest.serialization.Serializer object at 0x00000270424AE660>, 'version': '02', 'latest_version': None, 'datastore': None})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from azure.ai.ml.entities import Data\n",
+    "from azure.ai.ml.constants import AssetTypes\n",
+    "\n",
+    "my_path_folder = r'C:\\Users\\dvolf\\python_projects\\azure_dp_100_2025\\dp100_ds_associate_azure\\module_2_explore_azure_ml\\module_2_3'\n",
+    "\n",
+    "my_data_folder = Data(\n",
+    "    path=my_path_folder,\n",
+    "    type=AssetTypes.URI_FOLDER,\n",
+    "    description=\"my test folder with data\",\n",
+    "    name=\"diabetes-folder\",\n",
+    "    version='02'\n",
+    ")\n",
+    "\n",
+    "ml_client.data.create_or_update(my_data_folder)"
+   ]
   },
   {
    "cell_type": "code",
