--- a/module_2_explore_azure_ml/04/Work with compute.ipynb
+++ b/module_2_explore_azure_ml/04/Work with compute.ipynb
@@ -366,6 +366,48 @@
         "aml_url = returned_job.studio_url\n",
         "print(\"Monitor your job at\", aml_url)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# import libraries\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import roc_auc_score\n",
+        "from sklearn.metrics import roc_curve\n",
+        "\n",
+        "# load the diabetes dataset\n",
+        "print(\"Loading Data...\")\n",
+        "diabetes = pd.read_csv('diabetes.csv')\n",
+        "\n",
+        "# separate features and labels\n",
+        "X, y = diabetes[['Pregnancies','PlasmaGlucose','DiastolicBloodPressure','TricepsThickness','SerumInsulin','BMI','DiabetesPedigree','Age']].values, diabetes['Diabetic'].values\n",
+        "\n",
+        "# split data into training set and test set\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=0)\n",
+        "\n",
+        "# set regularization hyperparameter\n",
+        "reg = 0.01\n",
+        "\n",
+        "# train a logistic regression model\n",
+        "print('Training a logistic regression model with regularization rate of', reg)\n",
+        "model = LogisticRegression(C=1/reg, solver=\"liblinear\").fit(X_train, y_train)\n",
+        "\n",
+        "# calculate accuracy\n",
+        "y_hat = model.predict(X_test)\n",
+        "acc = np.average(y_hat == y_test)\n",
+        "print('Accuracy:', acc)\n",
+        "\n",
+        "# calculate AUC\n",
+        "y_scores = model.predict_proba(X_test)\n",
+        "auc = roc_auc_score(y_test,y_scores[:,1])\n",
+        "print('AUC: ' + str(auc))"
+      ]
     }
   ],
   "metadata": {
