worked with automl

--- a/3_module_2_experiment_ml_flow/2_3_1_azureml_datastores.ipynb
+++ b/3_module_2_experiment_ml_flow/2_3_1_azureml_datastores.ipynb
@@ -248,17 +248,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Models tried by AutoML:\n",
+      "- bold_pen_209zqns4\n",
+      "- khaki_clock_rghb07kf\n",
+      "- blue_box_rn5z4fwk\n",
+      "- sleepy_parsnip_b89z2v6d\n",
+      "- amusing_hat_f3dsf7t7\n",
+      "- coral_pumpkin_5zbcjqcd\n",
+      "- quiet_boniato_pgr5jzz5\n",
+      "- placid_bucket_wzkqyv12\n",
+      "- kind_plastic_cz9yctw7\n",
+      "- happy_nail_mvyq9v5q\n",
+      "- nice_quince_4fzzyk9n\n",
+      "- cyan_fennel_yq3g487n\n",
+      "- careful_watch_561g19wx\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the job details\n",
+    "job_detail = ml_client.jobs.get(returned_job.name)\n",
+    "\n",
+    "# For completed jobs, you can access the best model\n",
+    "if job_detail.status == \"Completed\":\n",
+    "    # Get the best model\n",
+    "    # best_model = job_detail.outputs.best_model\n",
+    "    \n",
+    "    # Get the list of all child jobs (each represents a model trial)\n",
+    "    all_child_jobs = ml_client.jobs.list(parent_job_name=returned_job.name)\n",
+    "    \n",
+    "    print(\"Models tried by AutoML:\")\n",
+    "    for job in all_child_jobs:\n",
+    "        # Extract model name/algorithm from the job\n",
+    "        if hasattr(job, 'display_name') and job.display_name:\n",
+    "            print(f\"- {job.display_name}\")"
+   ]
   },
   {
    "cell_type": "code",
